--- a/src/lang/english.txt
+++ b/src/lang/english.txt
@@ -3322,7 +3322,7 @@ STR_FINANCES_POSITIVE_INCOME                                    :{BLACK}+{CURREN
 STR_FINANCES_TOTAL_CAPTION                                      :{WHITE}Total:
 STR_FINANCES_TOTAL_INCOME                                       :{BLACK}Total:
 STR_FINANCES_TOTAL_VEHEXPENSE                                   :{BLACK}Total:
-STR_FINANCES_TOTAL_CAPTION                                      :{BLACK}Total:
+STR_FINANCES_TOTAL_GROSS                                        :{BLACK}Total Gross:
 STR_FINANCES_BANK_BALANCE_TITLE                                 :{WHITE}Bank Balance
 STR_FINANCES_LOAN_TITLE                                         :{WHITE}Loan
 STR_FINANCES_MAX_LOAN                                           :{WHITE}Maximum Loan: {BLACK}{CURRENCY_LONG}
