--- a/src/lang/english.txt
+++ b/src/lang/english.txt
@@ -3320,9 +3320,9 @@ STR_FINANCES_SECTION_OTHER                                      :{GOLD}Other
 STR_FINANCES_NEGATIVE_INCOME                                    :{BLACK}-{CURRENCY_LONG}
 STR_FINANCES_POSITIVE_INCOME                                    :{BLACK}+{CURRENCY_LONG}
 STR_FINANCES_TOTAL_CAPTION                                      :{WHITE}Total:
-STR_FINANCES_TOTAL_INCOME                                       :{GOLD}Total Income:
+STR_FINANCES_TOTAL_INCOME                                       :{GOLD}Total Income
 STR_FINANCES_TOTAL_VEHEXPENSE                                   :{GOLD}Total Vehicle Costs
-STR_FINANCES_TOTAL_GROSS                                        :{GOLD}Total Vehicle Profit:
+STR_FINANCES_TOTAL_GROSS                                        :{WHITE}Total Vehicle Profit:
 STR_FINANCES_BANK_BALANCE_TITLE                                 :{WHITE}Bank Balance
 STR_FINANCES_LOAN_TITLE                                         :{WHITE}Loan
 STR_FINANCES_MAX_LOAN                                           :{WHITE}Maximum Loan: {BLACK}{CURRENCY_LONG}
